--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section class="conten-flex">
   <section id="perfil">
     <h2>Perfil Personal</h2>
-    <img src="Imagenes\Foto 3x4.jpg" alt="Foto de Wilson" />
+    <img src="Foto_3x4.jpg" alt="Foto de Wilson" />
     <p>Soy estudiante de Ingeniería de Software con experiencia en seguridad privada y pasión por la tecnología, el análisis de riesgos y el desarrollo web.</p>
     <table>
       <tr><th>Edad</th><td>32 años</td></tr>
