--- a/index.html
+++ b/index.html
@@ -110,5 +110,6 @@
 
   <script src="script.js"></script>
   <a href="#perfil" class="back-to-top" title="Volver al inicio">⬆️</a>
+  <a href="hv_wilson.pdf" download class="boton-flotante-cv" title="Descargar hoja de vida">📄</a>
 </body>
 </html>
