--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
     <div class="card">
       <h3>Vise Ltda</h3>
       <p>Supervisor de Seguridad In House – Comercializadora Internacional Sunshine Bouquet</p>
+      <h3>Zehirut</h3>
+      <p>Escolta Lider – Discovery Chanel</p>
+      <h3>Unidad Administrativa Especial de Servicios Públicos</h3>
+      <p>Supervisor Operativo - Planta de aprovechamiento de RCD</p>
+      <h3>Seguridad Selecta</h3>
+      <p>Oficial de Seguridad - Embajada del Reino de Dinamarca</p>
     </div>
   </section>
 
