--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
     </div>
     <div class="card">
       <h3>Vise Ltda</h3>
-      <p>Supervisor de Seguridad In House – Comercializadora Internacional Sunshine Bouquet</p>
+      <p>Supervisor de Seguridad In House – Comercializadora Internacional Sunshine Bouquet (Agosto 2025 - Actualidad)</p>
       <h3>Zehirut</h3>
-      <p>Escolta Lider – Discovery Chanel</p>
+      <p>Escolta Lider – Discovery Chanel (Julio 2023 - Septiembre 2023)</p>
       <h3>Unidad Administrativa Especial de Servicios Públicos</h3>
-      <p>Supervisor Operativo - Planta de aprovechamiento de RCD</p>
+      <p>Supervisor Operativo - Planta de aprovechamiento de RCD (Octubre 2021 - Junio 2023)</p>
       <h3>Seguridad Selecta</h3>
-      <p>Oficial de Seguridad - Embajada del Reino de Dinamarca</p>
+      <p>Oficial de Seguridad - Embajada del Reino de Dinamarca (Septiembre 2016 - Octubre 2021)</p>
+      <h3>Fortox Security</h3>
+      <p>Supervisor de Seguridad - Falabella (Mayo 2015 - Diciembre 2015)</p>
     </div>
   </section>
 
