--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <section id="perfil">
     <h2>Perfil Personal</h2>
     <img src="Foto_3x4.jpg" alt="Foto de Wilson" />
-    <p>Soy estudiante de Ingeniería de Software con experiencia en seguridad privada y pasión por la tecnología, el análisis de riesgos y el desarrollo web.</p>
+    <p>Soy estudiante de Ingeniería de Software con experiencia en seguridad privada, donde he escalado desde vigilante hasta supervisor. Esta evolución me ha dado habilidades sólidas en análisis de riesgos, liderazgo y resolución de problemas. 
+    Me apasiona la tecnología, el desarrollo web y la ciberseguridad, y actualmente manejo HTML, CSS, JS, Java y entornos como NetBeans y Visual Studio en nivel básico. 
+    También me motiva el respeto por la vida, los animales y la naturaleza, valores que aplico en mi crecimiento personal y profesional..</p>
     <table>
       <tr><th>Edad</th><td>33 años</td></tr>
       <tr><th>Correo</th><td>wilsonherrera91@gmail.com</td></tr>
@@ -118,6 +120,9 @@
 
   <script src="script.js"></script>
   <a href="#perfil" class="back-to-top" title="Volver al inicio">⬆️</a>
-  <a href="cv_wilson.pdf" download class="boton-flotante-cv" title="Descargar hoja de vida">📄</a>
+  <a href="HojaDeVida_Wilson.pdf" download class="boton-flotante-cv" title="Descargar hoja de vida">
+  <i class="fas fa-file-download"></i>
+</a>
+
 </body>
 </html>
