--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <script src="script.js"></script>
   <a href="#perfil" class="back-to-top" title="Volver al inicio">⬆️</a>
-  <a href="HojaDeVida_Wilson.pdf" download class="boton-flotante-cv" title="Descargar hoja de vida">
+  <a href="cv_wilson.pdf" download class="boton-flotante-cv" title="Descargar hoja de vida">
   <i class="fas fa-file-download"></i>
 </a>
 
