--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
   <header>
+    <div class="logo">
+    <img src="LogoWH.png" alt="Logo personal de Wilson">
+    </div>
     <h1>Wilson Herrera Lara</h1>
     <p>Ingeniero de Software en formación | Supervisor de Seguridad | Ciclista Aficionado</p>
     <nav>
