--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
 </head>
 <body>
   <header>
+  <div class="header-container">
     <div class="logo">
-    <img src="LogoWH.png" alt="Logo personal de Wilson">
+      <img src="LogoWH.png" alt="Logo personal de Wilson">
     </div>
-    <h1>Wilson Herrera Lara</h1>
-    <p>Ingeniero de Software en formación | Supervisor de Seguridad | Ciclista Aficionado</p>
-    <nav>
-      <a href="#perfil">Perfil</a>
-      <a href="#trayectoria">Trayectoria</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
-  </header>
+    <div class="header-content">
+      <h1>Wilson Herrera Lara</h1>
+      <p>Ingeniero de Software en formación | Supervisor de Seguridad | Ciclista Aficionado</p>
+      <nav>
+        <a href="#perfil">Perfil</a>
+        <a href="#trayectoria">Trayectoria</a>
+        <a href="#contacto">Contacto</a>
+      </nav>
+    </div>
+  </div>
+</header>
+
   <section class="conten-flex">
   <section id="perfil">
     <h2>Perfil Personal</h2>
