--- a/index.html
+++ b/index.html
@@ -129,10 +129,8 @@
 </footer>
 
   <script src="script.js"></script>
-  <a href="#perfil" class="back-to-top" title="Volver al inicio">⬆️</a>
   <a href="cv_wilson.pdf" download class="boton-flotante-cv" title="Descargar hoja de vida">
-  <i class="fas fa-file-download"></i>
-</a>
-
+  <i class="fas fa-file-download"></i> </a>
+  
 </body>
 </html>
