--- a/index.html
+++ b/index.html
@@ -106,13 +106,16 @@
 </section>
 
   <section id="contacto">
-    <h2>Contáctame</h2>
-    <form id="contactForm">
-      <input type="text" name="nombre" placeholder="Tu nombre" required />
-      <input type="email" name="email" placeholder="Tu correo" required />
-      <textarea name="mensaje" placeholder="Tu mensaje" required></textarea>
-      <button type="submit">Enviar</button>
-    </form>
+  <h2>Contáctame</h2>
+  <form id="contactForm" action="https://formsubmit.co/wilsonherrera91@gmail.com" method="POST">
+  <input type="text" name="name" placeholder="Tu nombre" required>
+  <input type="email" name="email" placeholder="Tu correo" required>
+  <textarea name="message" placeholder="Tu mensaje" required></textarea>
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_next" value="https://tu-pagina.github.io/gracias.html">
+  <button type="submit">Enviar</button>
+</form>
+
   </section>
 </section>
 
