--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
   <input type="email" name="email" placeholder="Tu correo" required>
   <textarea name="message" placeholder="Tu mensaje" required></textarea>
   <input type="hidden" name="_captcha" value="false">
-  <input type="hidden" name="_next" value="https://tu-pagina.github.io/gracias.html">
+  <input type="hidden" name="_subject" value="Nuevo mensaje desde mi portafolio">
   <button type="submit">Enviar</button>
 </form>
+
 
   </section>
 </section>
