--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
   <textarea name="message" placeholder="Tu mensaje" required></textarea>
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_subject" value="Nuevo mensaje desde mi portafolio">
+  <input type="hidden" name="_autoresponse" value="Gracias por contactarme. Te responderé pronto.">
+  <input type="hidden" name="_template" value="table">
   <button type="submit">Enviar</button>
 </form>
 
