--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </table>
   </section> 
 
-  <section id="experiencia">
+  <section id="experiencia" data-aos="fade-right">
     <h2>Experiencia y Educación</h2>
     <div class="card">
       <h3>Fundación Universitaria Compensar</h3>
@@ -66,7 +66,7 @@
     </div>
   </section>
 
-  <section id="habilidades">
+  <section id="habilidades" data-aos="fade-left">
   <h2>Tecnologías que manejo</h2>
   <div class="skills">
     <div><label>My SQL</label><progress value="60" max="100"></progress></div>
@@ -79,7 +79,7 @@
   </div>
 </section>
 
-<section id="trayectoria">
+<section id="trayectoria" data-aos="fade-up">
   <h2>Mi Trayectoria en Seguridad</h2>
   <ul class="timeline">
     <li><strong>Vigilante</strong> – Inicios en seguridad privada</li>
@@ -95,7 +95,7 @@
   <p>Fortox, Atlas, Securitas, Vise (actual)</p>
 </section>
 
-<section id="complementaria">
+<section id="complementaria" data-aos="fade-right">
   <h2>Formación complementaria</h2>
   <ul class="timeline">
     <li><strong>Introduction to Cybersecurity</strong> Cisco Networking Academy </li>
@@ -107,7 +107,7 @@
   </ul>
 </section>
 
-  <section id="contacto">
+  <section id="contacto" data-aos="zoom-in">
   <h2>Contáctame</h2>
   <form id="contactForm" action="https://formsubmit.co/wilsonherrera91@gmail.com" method="POST">
   <input type="text" name="name" placeholder="Tu nombre" required>
