--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
   <a href="https://www.linkedin.com/in/wilson-herrera-lara/" target="_blank" title="LinkedIn">
     <i class="fab fa-linkedin"></i>
   </a>
-  <a href="https://candidato.co.computrabajo.com/candidate/cv/edit" target="_blank" title="Computrabajo">
-    <i class="fas fa-briefcase"></i>
+  <a href="https://github.com/WHLARA91" target="_blank" title="github">
+    <i class="fab fa-github"></i>
   </a>
 </div>
     <p>&copy; 2025 Wilson Herrera</p>
