--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <style> html { scroll-behavior: smooth; } </style>
 </head>
 <body>
+  <div id="loader">
+    <img src="LogoWH.png" alt="Cargando..." style="width:120px;">
+  </div>
   <header>
   <div class="header-container">
     <div class="logo">
@@ -54,7 +57,7 @@
     </div>
     <div class="card">
       <h3>Vise Ltda</h3>
-      <p>Supervisor de Seguridad In House – Comercializadora Internacional Sunshine Bouquet (Agosto 2025 - Actualidad)</p>
+      <p>Supervisor de Seguridad In House – Comercializadora Internacional Sunshine Bouquet (Agosto 2024 - Actualidad)</p>
       <h3>Zehirut</h3>
       <p>Escolta Lider – Discovery Chanel (Julio 2023 - Septiembre 2023)</p>
       <h3>Unidad Administrativa Especial de Servicios Públicos</h3>
