--- a/index.html
+++ b/index.html
@@ -150,5 +150,6 @@
 <script src="script.js"></script>
 <a href="cv_wilson.pdf" download class="boton-flotante-cv" title="Descargar hoja de vida">
 <i class="fas fa-file-download"></i> </a>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
